salesforce_sfdx_QA/main/default/objects/Payment_Batch__c/fields/Count_of_Not_Approved_Payments__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Not_Approved_Payments__c</fullName>
    <label>Count of Not Approved Payments</label>
    <summaryFilterItems>
        <field>Project_Payment__c.Payment_Status__c</field>
        <operation>notEqual</operation>
        <value>Paid, Approved, Cancelled, Negotiable, Reconciled, Voided</value>
    </summaryFilterItems>
    <summaryForeignKey>Project_Payment__c.Payment_Batch__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>