salesforce_sfdx_QA/main/default/objects/Payment_Batch__c/fields/Employee_Code__c.field-meta.xml
<CustomField>
    <fullName>Employee_Code__c</fullName>
    <formula>CASE( TEXT( Employee_Name__c ),
"Fahmid Khanom","21638",
"Philip Seay","30505",
"Alexander Baldock", "37991", /* Added by Pratap Kotra as part of USER STORY 137708 */
/*"Munene Callixta K","36082",*/
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Code</label>
    <type>Text</type>
</CustomField>