salesforce_sfdx_QA/main/default/objects/Payment_Batch__c/fields/IC_Invoice_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>IC_Invoice_Contact_Email__c</fullName>
    <label>IC Invoice Contact Email</label>
    <type>Email</type>
</CustomField>