salesforce_sfdx_QA/main/default/objects/Payment_Batch__c/fields/IC_Invoice_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>IC_Invoice_Contact_First_Name__c</fullName>
    <label>IC Invoice Contact First Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>