salesforce_sfdx_QA/main/default/objects/Payment_Batch__c/fields/Invoice_Description__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Description__c</fullName>
    <label>Invoice Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>