salesforce_sfdx_QA/main/default/objects/Payment_Batch__c/fields/Invoice_Total__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Total__c</fullName>
    <label>Invoice Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>