salesforce_sfdx_QA/main/default/objects/Payment_Batch__c/fields/Only_For_Program__c.field-meta.xml
<CustomField>
    <fullName>Only_For_Program__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Only For Program</label>
    <referenceTo>Energy_Efficiency_Program__c</referenceTo>
    <relationshipLabel>Payment Batches</relationshipLabel>
    <relationshipName>Payment_Batches</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>