salesforce_sfdx_QA/main/default/objects/Payment_Batch__c/fields/Payment_Batch_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Batch_Status__c</fullName>
    <label>Payment Batch Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved by Program Manager</fullName>
            </value>
            <value>
                <fullName>Submitted for Program Manager Approval</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>