salesforce_sfdx_QA/main/default/objects/Payment_Batch__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>kW</fullName>
            </value>
            <value>
                <fullName>kWh</fullName>
            </value>
            <value>
                <fullName>Therms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>